# isumi-utils-hs

./: .gitignore  .stylish-haskell.yaml  README.md  cabal.project  isumi-utils-hs.cabal
src/Isumi/Utils/: List.hs  Map.hs
test/: Spec.hs  TestPrelude.hs
test/Isumi/Utils/: ListSpec.hs  MapSpec.hs
